Okay data is being send to the client directly via the SimpMessagingTemplate, the Controller only comes into play when the client communicates w/ the server

--- a/microservices/rides-services/pom.xml
+++ b/microservices/rides-services/pom.xml
@@ -18,7 +18,7 @@
     
     <modules>
         <module>socket-service</module>
-<!--        <module>stomp-sockets</module>-->
+        <module>stomp-sockets</module>
 <!--        <module>socket-service</module>-->
         <module>event-producer</module>
 <!--        <module>dispatch-service</module>-->
