--- a/microservices/rides-services/dispatch-service/src/main/resources/application.yaml
+++ b/microservices/rides-services/dispatch-service/src/main/resources/application.yaml
@@ -9,19 +9,19 @@ spring.cloud.stream:
 #      process-out-0:
 #        destination: requests-out
   function:
-    definition: process;process_drivers;
+    definition: process_ride_requests;
 
 
 
-spring.cloud.stream.bindings.process-in-0:
+spring.cloud.stream.bindings.process_ride_requests-in-0:
   destination: ride-requests
-spring.cloud.stream.bindings.process-out-0:
-  destination: requests-out
+spring.cloud.stream.bindings.process_ride_requests-out-0:
+  destination: rides
 
-spring.cloud.stream.bindings.process_drivers-in-0:
-  destination: drivers
-spring.cloud.stream.bindings.process_drivers-out-0:
-  destination: drivers-out
+#spring.cloud.stream.bindings.process_drivers-in-0:
+#  destination: drivers
+#spring.cloud.stream.bindings.process_drivers-out-0:
+#  destination: drivers-out
 
 
 
