I've goofed! trying to get that supplier to work..

--- a/microservices/pom.xml
+++ b/microservices/pom.xml
@@ -19,7 +19,7 @@
 		<java.version>11</java.version>
 	</properties>
 	<modules>
-		<module>rides-services</module>
+		<module>transactions-services</module>
 
 
 		<!--		<module>driver-service</module>-->
