experminting with EmbeddedKafkaBroker... trying to upgrade the tests in the cloud-streams-examples repository to use junit5

--- a/microservices/transactions-services/pom.xml
+++ b/microservices/transactions-services/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>avro-schema</module>
         <module>ui-request-service</module>
+        <module>test-embedded-kafka</module>
     </modules>
 
 </project>
