Add the dispatch service w/ EmbeddedKafka tests to the transactions-services, which is where I intended to test out the kafka transactions.

--- a/microservices/transactions-services/pom.xml
+++ b/microservices/transactions-services/pom.xml
@@ -16,6 +16,7 @@
         <module>avro-schema</module>
         <module>ui-request-service</module>
         <module>test-embedded-kafka</module>
+        <module>dispatch-service</module>
     </modules>
 
 </project>
