--- a/microservices/rides-services/dispatch-service/pom.xml
+++ b/microservices/rides-services/dispatch-service/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>2020.0.0</spring-cloud.version>
+		<version>Hoxton.RELEASE</version>
 		<confluent.version>4.0.0</confluent.version>
 	</properties>
 
@@ -28,6 +28,13 @@
 			<artifactId>avro-schema</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-integration</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
