--- a/microservices/rides-services/pom.xml
+++ b/microservices/rides-services/pom.xml
@@ -17,10 +17,11 @@
     <version>1.0-SNAPSHOT</version>
     
     <modules>
-<!--        <module>socket-service</module>-->
+        <module>ride-request-service</module>
+        <!--        <module>socket-service</module>-->
 <!--        <module>stomp-sockets</module>-->
 <!--        <module>socket-service</module>-->
-        <module>event-producer</module>
+
 <!--        <module>dispatch-service</module>-->
 <!--        <module>drivers-service</module>-->
 <!--        <module>ride-request-service</module>-->
