Update the AvroUser schema..

--- a/microservices/transactions-services/pom.xml
+++ b/microservices/transactions-services/pom.xml
@@ -15,7 +15,7 @@
     <modules>
         <module>avro-schema</module>
         <module>ride-request-service</module>
-
+        <module>processing-service</module>
 
 
 <!--        <module>ui-request-service</module>-->
