The processing service broke so I'm trying w/ users-processing-service

--- a/microservices/transactions-services/pom.xml
+++ b/microservices/transactions-services/pom.xml
@@ -15,8 +15,9 @@
     <modules>
         <module>avro-schema</module>
         <module>ride-request-service</module>
-        <module>processing-service</module>
-
+        <module>users-processing-service</module>
+<!--        <module>processing-service</module>-->
+<!--        <module>dispatch-service</module>-->
 
 <!--        <module>ui-request-service</module>-->
 <!--        <module>dispatch-service</module>-->
