--- a/microservices/transactions-services/processing-service/pom.xml
+++ b/microservices/transactions-services/processing-service/pom.xml
@@ -66,6 +66,9 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -83,6 +86,14 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>io.confluent</groupId>
