--- a/microservices/transactions-services/users-processing-service/pom.xml
+++ b/microservices/transactions-services/users-processing-service/pom.xml
@@ -11,9 +11,9 @@
 	</parent>
 
 	<groupId>org.mddarr</groupId>
-	<artifactId>dispatch-service</artifactId>
+	<artifactId>users-processing-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>dispatch-service</name>
+	<name>users-processing-service</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -47,6 +47,26 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+
+
 
 		<!-- Kafka, Avro, Confluent & Spring Cloud Stream Dependencies		-->
 
