--- a/microservices/transactions-services/users-processing-service/src/main/resources/application.yaml
+++ b/microservices/transactions-services/users-processing-service/src/main/resources/application.yaml
@@ -1,7 +1,14 @@
 server.port: 8090
 
 spring.cloud.stream:
-
+  kafka:
+    binder:
+      transaction:
+        transaction-id-prefix: user-
+        producer:
+          configuration:
+            retries: 1
+            acks: all
   function:
     definition: process_ride_requests;
 
@@ -9,6 +16,9 @@ spring.cloud.stream.bindings.process_ride_requests-in-0:
   destination: users
 spring.cloud.stream.bindings.process_ride_requests-out-0:
   destination: users-out
+
+
+
 
 
 
