--- a/microservices/transactions-services/users-processing-service/pom.xml
+++ b/microservices/transactions-services/users-processing-service/pom.xml
@@ -18,7 +18,7 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>2020.0.0</spring-cloud.version>
+		<spring-cloud.version>Hoxton.BUILD-SNAPSHOT</spring-cloud.version>
 		<confluent.version>4.0.0</confluent.version>
 	</properties>
 
@@ -186,8 +186,6 @@
 			<artifactId>hsqldb</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-
 
 
 	</dependencies>
