I am going to get the user data into kafka w/ kafka connect..

--- a/microservices/pom.xml
+++ b/microservices/pom.xml
@@ -19,9 +19,10 @@
 		<java.version>11</java.version>
 	</properties>
 	<modules>
-		<module>transactions-services</module>
+<!--		<module>transactions-services</module>-->
+        <module>materialized-views</module>
 
-<!--		<module>rides-services</module>-->
+        <!--		<module>rides-services</module>-->
 
 
 		<!--		<module>transactions-services</module>-->
