--- a/microservices/materialized-views/users-service/src/main/resources/application.yaml
+++ b/microservices/materialized-views/users-service/src/main/resources/application.yaml
@@ -2,14 +2,10 @@ server.port: 8080
 
 spring.cloud.stream:
   function:
-    definition: users;
+    definition: process_users;
 
-spring.cloud.stream.bindings.process_purchase_users-in-0:
-  destination: users
-
-#spring.cloud.stream.kafka.streams.bindings.process_inventory-in-0:
-#  consumer.materializedAs: incoming-store-1
-
+spring.cloud.stream.bindings.process_users-in-0:
+  destination: users.users
 
 spring.cloud.stream.kafka.streams.binder:
   brokers: localhost:9092
