Set the schema for the users service in the hikari.schema setting..

--- a/microservices/materialized-views/users-service/src/main/resources/application.yaml
+++ b/microservices/materialized-views/users-service/src/main/resources/application.yaml
@@ -17,3 +17,26 @@ spring.cloud.stream.kafka.streams.binder.configuration:
   default.key.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
   default.value.serde: io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde
 
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgresdb
+    driver-class-name: org.postgresql.Driver
+    username: postgres
+    password: postgres
+    hikari:
+      connectionTimeout: 30000
+      idleTimeout: 30000
+      maxLifetime: 1800000
+      minimumIdle: 5
+      maximumPoolSize: 20
+      poolName: SpringBootJPAHikariCP
+      schema: users
+
+
+  jpa:
+    properties:
+      hibernate:
+        default_schema: users
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
