--- a/microservices/materialized-views/users-service/pom.xml
+++ b/microservices/materialized-views/users-service/pom.xml
@@ -48,6 +48,20 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<!-- SPRING JPA DEPENDENCIES        -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
 		<!-- Kafka, Avro, Confluent & Spring Cloud Stream Dependencies		-->
 
 
