I am able to specify the schema in the entities table annotation as well..

--- a/microservices/materialized-views/users-service/src/main/resources/application.yaml
+++ b/microservices/materialized-views/users-service/src/main/resources/application.yaml
@@ -30,7 +30,7 @@ spring:
       minimumIdle: 5
       maximumPoolSize: 20
       poolName: SpringBootJPAHikariCP
-      schema: users
+#      schema: users
 
 
   jpa:
