Add an example of processor..

--- a/microservices/materialized-views/pom.xml
+++ b/microservices/materialized-views/pom.xml
@@ -14,7 +14,8 @@
 
     <modules>
         <module>avro-schema </module>
-        <module>users-service</module>
+        <module>streams-service</module>
+<!--        <module>users-service</module>-->
 <!--        <module> break-service </module>-->
     </modules>
 
