--- a/microservices/materialized-views/testcontainers-example/pom.xml
+++ b/microservices/materialized-views/testcontainers-example/pom.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.1</version>
+		<version>2.1.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>org.mddarr</groupId>
-	<artifactId>containers-testing-service</artifactId>
+	<groupId>com.zaytsevp</groupId>
+	<artifactId>testcontainers-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>containers-testing-service</name>
-	<description>Demo project for Spring Boot</description>
+	<name>testcontainers-example</name>
+	<description>Demo project for testcontainers</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -23,6 +23,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -44,7 +45,32 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--Guava-->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>27.0.1-jre</version>
+		</dependency>
 
+		<!-- Swagger-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa -->
+		<dependency>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-jpa</artifactId>
+			<version>4.1.4</version>
+		</dependency>
 
 		<!-- Tests -->
 		<dependency>
@@ -59,13 +85,25 @@
 			<version>5.3.2</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.github.database-rider/rider-spring -->
 		<dependency>
 			<groupId>com.github.database-rider</groupId>
 			<artifactId>rider-spring</artifactId>
-			<version>1.16.0</version>
+			<version>1.5.2</version>
+			<scope>test</scope>
 		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.github.database-rider</groupId>-->
+			<!--<artifactId>rider-junit5</artifactId>-->
+			<!--<version>1.5.2</version>-->
+			<!--<scope>test</scope>-->
+		<!--</dependency>-->
 
+		<!-- DB -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!-- Testcontainers -->
 		<dependency>
@@ -83,8 +121,6 @@
 			<scope>compile</scope>
 		</dependency>
 
-
-
 	</dependencies>
 
 	<build>
@@ -92,14 +128,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
